src/objects/Model__c.object
<CustomObject>
    <description>点検対象の機種を表すマスター。</description>
    <fields>
        <fullName>CheckSpan__c</fullName>
        <defaultValue>0</defaultValue>
        <label>点検間隔日数</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExteriorImage__c</fullName>
        <formula>IMAGE( ExteriorURL__c ,&apos;外観&apos;, 100, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>外観イメージ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExteriorURL__c</fullName>
        <label>外観URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>施設開発会社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>設備種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ModelType</valueSetName>
        </valueSet>
    </fields>
    <label>施設種別</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Manufacturer__c</columns>
        <columns>ExteriorImage__c</columns>
        <columns>ModelType__c</columns>
        <columns>CheckSpan__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>施設タイプ</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>